--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
@@ -24,4 +24,3 @@
     "nodemon": "^2.0.2"
   }
 }
-// "test": "echo \"Error: no test specified\" && exit 1",
